@@ -1,4 +1,4 @@
-# version: 201809262320
+# version: 201809300957
 users-user	User ID	<QXZ>This field is where you put the users ID number, can be up to 8 digits in length, Must be at least 2 characters in length.</QXZ>
 users-pass	Password	<QXZ>This field is where you put the users password. Must be at least 2 characters in length. A medium strength user password will be at least 10 characters in length, and a strong user password will be at least 20 characters in length and have letters as well as at least one number. It is recommended that you use a longer password if possible, stringing together several unrelated words with no spaces, and a number somewhere in the string. The maximum size of a password is 100 characters.</QXZ>
 users-force_change_password	Force Change Password	<QXZ>If this option is set to Y then the user will be prompted to change their password the next time they log in to the administration webpage. Default is N.</QXZ>
@@ -818,7 +818,7 @@ phones-voicemail_dump_exten	VMAIL Dump Exten	<QXZ>This is the dial plan prefix u
 phones-voicemail_dump_exten_no_inst	VMAIL Dump Exten NI	<QXZ>This is the dial plan prefix used to send calls directly to a user voicemail from a live call in the astGUIclient app. This is the No Instructions setting.</QXZ>
 phones-ext_context	Exten Context	<QXZ>This is the dial plan context that the agent screen, primarily uses. It is assumed that all numbers dialed by the client apps are using this context so it is a good idea to make sure this is the most wide context possible. verify with extensions.conf file before changing. default is default.</QXZ>
 phones-phone_context	Phone Context	<QXZ>This is the dial plan context that this phone will use to dial out. If you are running a call center and you do not want your agents to be able to dial out outside of the agent screen application for example, then you would set this field to a dialplan context that does not exist, something like agent-nodial. default is default.</QXZ>
-phones-codecs_list	Allowed Codecs	<QXZ>You can define a comma delimited list of codecs to be set as the default codecs for this phone. Options for codecs include ulaw, alaw, gsm, g729, speex, g722, g723, g726, ilbc, ... Some of these codecs might not be available on your system, like g729 or g726. If the field is empty, then the system default codecs or the phone entry above this one will be used for the allowable codecs. Default is empty.</QXZ>
+phones-codecs_list	Allowed Codecs	<QXZ>You can define a comma delimited list of codecs to be set as the default codecs for this phone. Options for codecs include ulaw, alaw, gsm, g729, speex, g722, g723, g726, ilbc, opus, slin, g719,... Some of these codecs might not be available on your system, like g729, g726 or opus. If the field is empty, then the system default codecs or the phone entry above this one will be used for the allowable codecs. Default is empty.</QXZ>
 phones-codecs_with_template	Allowed Codecs With Template	<QXZ>Setting this option to 1 will include the codecs defined above even if a conf file template is used. Default is 0.</QXZ>
 phones-conf_qualify	Conf Qualify	<QXZ>This setting allows you to add or remove the qualify entry in the Asterisk conf file for this phone if it is IAX type. Default is Y for active.</QXZ>
 phones-dtmf_send_extension	DTMF send Channel	<QXZ>This is the channel string used to send DTMF sounds into meetme conferences from the client apps. Verify the exten and context with the extensions.conf file.</QXZ>
@@ -1047,7 +1047,7 @@ settings-label_hide_field_logs	Hide Label in Call Logs	<QXZ>If a label is set to
 settings-qc_features_active	QC Features Active	<QXZ>This option allows you to enable or disable the QC or Quality Control features. Default is 0 for inactive.</QXZ>
 settings-default_webphone	Default Webphone	<QXZ>If set to 1, this option will make all new phones created have Set As Webphone set to Y. Default is 0.</QXZ>
 settings-webphone_systemkey	Webphone System Key	<QXZ>If your system or provider requires it, this is where the System Key for the webphone should be entered in. Default is empty.</QXZ>
-settings-default_codecs	Default Codecs	<QXZ>You can define a comma delimited list of codecs to be set as the default codecs for all systems. Options for codecs include ulaw, alaw, gsm, g729, speex, g722, g723, g726, ilbc, ... Default is empty.</QXZ>
+settings-default_codecs	Default Codecs	<QXZ>You can define a comma delimited list of codecs to be set as the default codecs for all systems. Options for codecs include ulaw, alaw, gsm, g729, speex, g722, g723, g726, ilbc, opus, slin, g719,... Default is empty.</QXZ>
 settings-custom_dialplan_entry	Custom Dialplan Entry	<QXZ>This field allows you to enter in any dialplan elements that you want for all of the asterisk servers, the lines will be added to the default context.</QXZ>
 settings-reload_dialplan_on_servers	Reload Dialplan On Servers	<QXZ>This option allows you to force a reload of the dialplan on all Asterisk servers in the cluster. If you made changes in the Custom Dialplan Entry above you should set this to 1 and submit to have those changes go into effect on the servers.</QXZ>
 settings-noanswer_log	No-Answer Log	<QXZ>This option will log the auto-dial calls that are not answered to a separate table. Default is N.</QXZ>
